  - fixed argument passing to straight textual execute() on engine, connection.
  can handle *args or a list instance for positional, **kwargs or a dict instance
  for named args, or a list of list or dicts to invoke executemany()
  - small fix to BoundMetaData to accept unicode or string URLs
  - fixed named PrimaryKeyConstraint generation [ticket:466] courtesy andrija at gmail
- orm:
  - another refactoring to relationship calculation.  Allows more accurate ORM behavior
  with relationships from/to/between mappers, particularly polymorphic mappers,
  also their usage with Query, SelectResults.  
  tickets include [ticket:439], [ticket:441], [ticket:448].
  - implemented foreign_keys argument to mapper [ticket:385].  use in conjunction with
  primaryjoin/secondaryjoin arguments to specify/override foreign keys defined on the
  Table instance.
  - extension() query option propigates to Mapper._instance() method so that 
  all loading-related methods get called [ticket:454]
  - eager relation to an inheriting mapper wont fail if no rows returned for
  the relationship.
  - fix for very large topological sorts, courtesy ants.aasma at gmail [ticket:423]
  - eager loading is slightly more strict about detecting "self-referential"
  relationships, specifically between polymorphic mappers.
  - improved support for complex queries embedded into "where" criterion
  for query.select() [ticket:449]
  - contains_eager('foo') automatically implies eagerload('foo')
  - fixed bug where cascade operations incorrectly included deleted collection
  items in the cascade [ticket:445]
  - fixed relationship deletion error when one-to-many child item is moved to a new 
  parent in a single unit of work [ticket:478]
  - fixed relationship deletion error where parent/child with a single column as PK/FK 
  on the child would raise a "blank out the primary key" error, if manually deleted
  or "delete" cascade without "delete-orphan" was used